--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "library",
     "version": "0.1.2",
     "require": {
-        "wind-framework/wind-framework": "~0.1"
+        "wind-framework/wind-framework": "^0.2"
     },
     "license": "Apache-2.0",
     "authors": [
