--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Wind framework view component.",
     "type": "library",
     "require": {
-        "wind-framework/wind-framework": "1.0.x-dev"
+        "wind-framework/wind-framework": "^1.0"
     },
     "license": "Apache-2.0",
     "authors": [
